@@ -1,3 +1,8 @@
+2010-03-02  Mark Probst  <mark.probst@gmail.com>
+
+	* tools/sgen-grep-binprot.c: Tool for searching through the binary
+	protocol files generated by SGen.
+
 2010-02-26  Miguel de Icaza  <miguel@novell.com>
 
 	* Make the scripts default to 4.0 now.
